floating action button, composing tweet dialog, swipe to refresh

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="app_name">SimpleTweets</string>
     <string name="login_label">Connect to Twitter</string>
+    <string name="btn_tweet">Tweet</string>
+    <string name="compose_hint">What\'s happening?</string>
     <!--<string name="title_activity_timeline">Home Timeline</string> -->
 
 </resources>
